More Complex Plots

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <title>Bokeh Scatter Plots</title>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh-widgets.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh-tables.min.css" type="text/css" />
  </head>
  <body>
      {{ div | safe }}
 </body>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh-widgets.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh-tables.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.9/bokeh-gl.min.js"></script>
     {{ script | safe }}
 </html>
